[tool.poetry]
name = "gcf_to_firestore"
version = "0.1.0"
description = ""
authors = ["Dhalmadoll <dhalma@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-firestore = "^2.3.4"
fire = "^0.4.0"
firebase-admin = "^5.1.0"
functions-framework = "^3.0.0"
line-bot-sdk = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"